--- a/package.json
+++ b/package.json
@@ -4,9 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "watchify client/index.js -o public/bundle.js",
+    "build": "browserify client/index.js -g uglifyify -o public/bundle.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d public"
+  },
+  "browserify": {
+    "transforms": [
+      "babelify"
+    ]
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {},
+  "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
+    "gh-pages": "^0.11.0",
+    "inux": "^2.0.5",
+    "uglifyify": "^3.0.2",
+    "watchify": "^3.7.0"
+  }
 }
