--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "watchify client/index.js -o public/bundle.js",
-    "build": "browserify client/index.js -g uglifyify -o public/bundle.js",
+    "watch": "watchify client/index.js -o public/bundle.js -dv",
+    "build": "NODE_ENV=production browserify client/index.js -g uglifyify -o public/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gh-pages -d public"
+    "deploy": "gh-pages -d public",
+    "publish": "npm run build && npm run deploy"
   },
   "browserify": {
-    "transforms": [
+    "transform": [
       "babelify"
     ]
   },
