--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "serve": "node server.js",
     "watch": "watchify client/index.js -o public/bundle.js -dv",
     "build": "NODE_ENV=production browserify client/index.js -g uglifyify -o public/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,9 +24,11 @@
     "babel-preset-es2015": "^6.14.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "express": "^4.14.0",
     "gh-pages": "^0.11.0",
     "inux": "^2.0.5",
     "uglifyify": "^3.0.2",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "yo-yo": "^1.2.2"
   }
 }
