--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "node server.js",
-    "watch": "watchify client/index.js -o public/bundle.js -dv",
-    "build": "NODE_ENV=production browserify client/index.js -g uglifyify -o public/bundle.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "prestart": "npm run build",
+    "build": "npm run build:js && npm run build:css",
+    "build:js": "NODE_ENV=production browserify client/index.js -g uglifyify -o public/bundle.js",
+    "build:css": "node-sass --include-path client/styles --output-style compressed client/index.scss public/style.css",
+    "watch:js": "watchify client/index.js -o public/bundle.js -dv",
+    "watch:css": "node-sass --include-path client/styles -w client/index.scss public/style.css",
     "deploy": "gh-pages -d public",
     "publish": "npm run build && npm run deploy"
   },
@@ -19,15 +22,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "babel-preset-es2015": "^6.14.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "express": "^4.14.0",
+    "node-sass": "^3.8.0",
+    "uglifyify": "^3.0.2"
+  },
+  "devDependencies": {
     "gh-pages": "^0.11.0",
     "inux": "^2.0.6",
-    "uglifyify": "^3.0.2",
+    "nodemon": "^1.10.2",
     "watchify": "^3.7.0",
     "yo-yo": "^1.2.2"
   }
