--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scuttle-camp-1",
+  "name": "one.camp.scuttlebutt.nz",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
